--- a/index.html
+++ b/index.html
@@ -21,22 +21,21 @@
                 <h3>Lista de Tarefas</h3>
                 
                 <div class="all-todos">
-                    <div class="single-todo done">
-                        <p>Aprender HTML, CSS e Javascript</p>
-                    </div>
-                    <div class="single-todo done">
-                        <p>Aprender o básico de Vue JS</p>
-                    </div>
-                    <div class="single-todo">
-                        <p>Completar o desafio de Vue JS com excelência</p>
+                    <div 
+                        class="single-todo" 
+                        v-for="task in tasks" 
+                        @click="task.active = !task.active"
+                        :class="{ done : !task.active }"
+                    >
+                        <p>{{ task.name }}</p>
                     </div>
 
                 </div>
 
-                <button class="clear">Limpar tudo</button>
+                <button class="clear" @click="clearTasks()">Limpar tudo</button>
 
-                <input type="text" placeholder="Escreva uma nova tarefa...">
-                <button class="add">Adicionar</button>
+                <input type="text" placeholder="Escreva uma nova tarefa..." v-model="newTask.name">
+                <button class="add" @click="addTask()">Adicionar</button>
 
                 <div class="instructions">
                     Instruções:
@@ -49,7 +48,7 @@
             </section>
 
         </main>
-        <script src="https://unpkg.com/vue@next"></script>
+        <script src="https://unpkg.com/vue@3"></script>
         <script src="scripts.js"></script>
     </body>
 
